Added waitlist message

--- a/registration.html
+++ b/registration.html
@@ -191,6 +191,11 @@ media="screen" charset="utf-8" />
   We just sent you an email with more details.
 </div>
 
+<div class="group" id="waitlist">
+  You have been waitlisted for TartanHacks 2013.<br/>
+  We just sent you an email with more details.
+</div>
+
 </div>
 
 
