Quintin copy changes

--- a/registration.html
+++ b/registration.html
@@ -175,7 +175,7 @@ media="screen" charset="utf-8" />
              or lose my spot.</li>
           <li>
             <input type="checkbox" class="required" value="false">
-            I have read and agree to the rules posted on the TartanHacks website.</li>
+            I have read and agree to the <a href="http://tartanhacks.com/rules">rules</a> posted on the TartanHacks website.</li>
         </ul>
       </div>
       <div class="btnContainer">
