--- a/registration.html
+++ b/registration.html
@@ -111,6 +111,7 @@ media="screen" charset="utf-8" />
           <option value="NA">Not Applicable</option>
           <option value="CIT">CIT</option>
           <option value="CFA">CFA</option>
+          <option value="MCS">MCS</option>
           <option value="DCHS">DCHS</option>
           <option value="TPR">Tepper</option>
           <option value="HNZ">Heinz</option>
